Итерация #2
- Создание задачи
- События и слушатели на создание задачи
- Отправка уведомлений при создании таски со статусом high
